# hearth

./: .gitignore  Cargo.toml  DESIGN.md  Dioxus.toml  LAYOUT.md  README.md  build_android_with_icons.sh  dioxus.toml  flake.nix  generate_icons.sh  package-lock.json  tailwind.config.js  tailwind.sh  watch_android.sh
docs/: architecture.md  components.md  development.md  platforms.md  styling.md
hearth-core/: Cargo.toml
hearth-core/src/: lib.rs  logging.rs  markdown.rs  models.rs  sample.rs  settings.rs  storage.rs
hearth-desktop/: Cargo.toml
hearth-desktop/src/: main.rs
hearth-mobile/: Cargo.toml
hearth-mobile/src/: main.rs
hearth-ui/: Cargo.toml  app.css
hearth-ui/assets/: fontawesome.css  fonts.css  scrollbar.css  tailwind.css  theme.css  tooltip.css  typography.css
hearth-ui/assets/components/: toast.css
hearth-ui/src/: app.rs  layout.rs  lib.rs  loading.rs  logo.rs  models.rs  routes.rs  sample.rs  settings.rs  viewport.rs
hearth-ui/src/cards/: character_avatar_group.rs  item_card.rs  mod.rs  story_card.rs
hearth-ui/src/chat/: conversation.rs  input.rs  message.rs  mod.rs  participants.rs  scenario.rs
hearth-ui/src/components/: accordion.rs  aspect_ratio.rs  avatar.rs  badge.rs  button.rs  calendar.rs  card.rs  carousel.rs  checkbox.rs  collapsible.rs  input.rs  input_otp.rs  label.rs  layout.rs  logging.rs  mod.rs  modal.rs  popover.rs  progress.rs  radio.rs  range_calendar.rs  scroll_area.rs  select.rs  separator.rs  sheet.rs  skeleton.rs  slider.rs  switch.rs  table.rs  tabs.rs  textarea.rs  toaster.rs  toggle.rs  toggle_group.rs  tooltip.rs
hearth-ui/src/components/features/: dark_mode_toggle.rs  expandable_input_area.rs  log_viewer.rs  mod.rs  page_header.rs  story_card.rs  story_management_menu.rs  story_message.rs
hearth-ui/src/components/features/navigation/: bottom_nav.rs  mod.rs  sidebar.rs
hearth-ui/src/components/features/universal_search/: mod.rs  search_dropdown.rs  search_toggle.rs  tag.rs  tag_modal.rs  tag_section.rs
hearth-ui/src/components/ui/: accordion.rs  app_loading.rs  aspect_ratio.rs  avatar.rs  avatar_group.rs  badge.rs  button.rs  calendar.rs  card.rs  carousel.rs  checkbox.rs  collapsible.rs  gesture_detector.rs  input.rs  input_otp.rs  label.rs  layout.rs  markdown_content.rs  mod.rs  modal.rs  notice.rs  popover.rs  progress.rs  radio.rs  range_calendar.rs  scroll_area.rs  select.rs  separator.rs  sheet.rs  skeleton.rs  slider.rs  switch.rs  table.rs  tabs.rs  textarea.rs  toaster.rs  toggle.rs  toggle_group.rs  toggle_icon.rs
hearth-ui/src/universal_search/: mod.rs  search_dropdown.rs  search_toggle.rs  tag.rs  tag_modal.rs  tag_section.rs
hearth-ui/src/views/: characters.rs  chat.rs  mod.rs  scenarios.rs  settings.rs  stories.rs  story.rs
hearth-ui/src/views/design/: mod.rs  showcase.rs
hearth-ui/src/views/design/showcases/: accordion.rs  aspect_ratio.rs  avatar.rs  badge.rs  button.rs  calendar.rs  card.rs  carousel.rs  checkbox.rs  collapsible.rs  gesture_detector.rs  input.rs  input_otp.rs  label.rs  mod.rs  modal.rs  notice.rs  popover.rs  progress.rs  radio.rs  range_calendar.rs  scroll_area.rs  select.rs  separator.rs  sheet.rs  skeleton.rs  slider.rs  switch.rs  table.rs  tabs.rs  textarea.rs  toggle.rs  toggle_group.rs  toggle_icon.rs  tooltip.rs  typography.rs
hearth-web/: Cargo.toml
hearth-web/src/: main.rs
ui/assets/: tailwind.css
