[workspace]
resolver = "2"
members = [
    "hearth-core",
    "hearth-ui",
    "hearth-web",
    "hearth-desktop",
    "hearth-mobile",
]

[workspace.dependencies]
dioxus = { version = "0.7.0-rc.0" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
thiserror = "1.0"

# workspace
hearth-core = { path = "hearth-core" }
hearth-ui = { path = "hearth-ui" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

