[package]
name = "hearth-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
uuid = { version = "1.0", features = ["v4", "js"] }
toml = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
log = "0.4"
markdown = "1.0.0-alpha.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.77", features = ["Window", "Storage", "Document", "HtmlElement", "Blob", "BlobPropertyBag", "Url"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
rfd = "0.14"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"