[package]
name = "hearth-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
hearth-core = { workspace = true }
dioxus = { workspace = true }
dioxus-document = "0.7.0-rc.0"
urlencoding = "2.1"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }

# Cross-platform timer support for native platforms
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["time", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# Web-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.77", features = ["console", "Element", "HtmlElement", "HtmlInputElement", "Window", "Document", "DomRect", "Blob", "BlobPropertyBag", "Url"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-time = "1.1"

# Desktop-specific dependencies (Linux x86_64 only, not Android)
[target.'cfg(all(target_os = "linux", target_arch = "x86_64", not(feature = "mobile")))'.dependencies]
dioxus-desktop = "0.7.0-rc.0"
rfd = "0.14"

# Mobile-specific dependencies
[target.'cfg(feature = "mobile")'.dependencies]
# Mobile doesn't use rfd - simpler file operations only


[features]
default = []
mobile = []

